--- a/Commonfee/src/app/user/Residentreport/report.component.html
+++ b/Commonfee/src/app/user/Residentreport/report.component.html
@@ -7,7 +7,7 @@
     
 
     <div class="form-group">
-      <label for="petition_Title">บ้านเลขที่</label>
+      <label for="petition_Title">หัวข้อคำร้อง</label>
       <input
         id="petition_Title"
         type="text"
@@ -26,7 +26,7 @@
           reportForm.get('petition_Title').touched
         "
       >
-        กรุณากรอกข้อมูลบ้านเลขที่
+        กรุณากรอกหัวข้อคำร้อง
       </div>
     </div>
 
