--- a/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
+++ b/Commonfee/src/app/admin/complain-repair/complain-repair.component.css
@@ -10,7 +10,7 @@
     border-radius: 10px;
     margin: 20px auto; /* จัดกึ่งกลางและให้มีระยะห่างรอบ */
     padding: 20px;
-    margin-left: 50px;
+    margin-left: auto;
     text-align: center;
 }
 th, td {
@@ -29,6 +29,8 @@ table {
     margin-top: 20px;
     max-width: 1200px;
     width: 100%;
-    margin-left: 40px;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
 }
+
