--- a/Commonfee/src/app/user/status/status.component.html
+++ b/Commonfee/src/app/user/status/status.component.html
@@ -1,5 +1,4 @@
-<h3>สถานะคำร้องเรียน / ซ่อม</h3> 
-<div class="filter">
+<!-- <div class="filter">
   <div class="headfilter"><h5>ประวัติการชำระเงิน</h5></div>
   <div class="filtercontrol">
       <div class="form">
@@ -33,10 +32,82 @@
 
   <button type="submit" class="btn btn-primary">กรอง</button>
   </div>
-</div>
-<div class="container mt-5">
-  
+</div> -->
+
+
+<br>
+<div class="report-form">
+  <h3 style="text-align:center ;font-weight: 600;">แจ้งคำร้องเรียน / คำร้องซ่อม</h3>
+  <form [formGroup]="reportForm" (ngSubmit)="onSubmit()" class="needs-validation" novalidate>
     
+
+    <div class="form-group">
+      <label for="petition_Title">หัวข้อคำร้อง</label>
+      <input
+        id="petition_Title"
+        type="text"
+        formControlName="petition_Title"
+        class="form-control"
+        [ngClass]="{
+          'is-invalid':
+            reportForm.get('petition_Title').invalid &&
+            reportForm.get('petition_Title').touched
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="
+          reportForm.get('petition_Title').invalid &&
+          reportForm.get('petition_Title').touched
+        "
+      >
+        กรุณากรอกหัวข้อคำร้อง
+      </div>
+    </div>
+
+    
+    <div class="form-group">
+      <label for="petition_Type">เลือกประเถทคำร้อง</label>
+      <select id="petition_Type" formControlName="petition_Type" class="form-select"  aria-label="Default select example">
+        <option value="">เลือกประเภทคำร้อง</option>
+        <option value="Normal">ร้องเรียนทั่วไป</option>
+        <option value="Repair">คำร้องขอซ่อม</option>
+ 
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="petition_detail">รายละเอียดคำร้องเรียน</label>
+      <textarea
+        id="petition_detail"
+        formControlName="petition_detail"
+        class="form-control"
+        [ngClass]="{
+          'is-invalid':
+            reportForm.get('petition_detail').invalid &&
+            reportForm.get('petition_detail').touched
+        }"
+      ></textarea>
+      <div
+        class="invalid-feedback"
+        *ngIf="
+          reportForm.get('petition_detail').invalid &&
+          reportForm.get('petition_detail').touched
+        "
+      >
+        กรุณากรอกรายละเอียดคำร้องเรียน
+      </div>
+    </div>
+
+    <button type="button" class="btn btn-light" routerLink="/home">ยกเลิก</button>&nbsp;&nbsp;
+    <button type="submit" class="btn btn-light">ยืนยัน</button>
+  </form>
+</div>
+
+
+
+<div class="container mt-5">
+  <h3>สถานะคำร้องเรียน / ซ่อม</h3> 
     <table class="status-table">
       <thead>
         <tr>
