--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -33,7 +33,7 @@
     <div id="profilePopup" class="profile-popup" [ngStyle]="{ 'visibility': isProfilePopupVisible ? 'visible' : 'hidden' }">
       <div class="profile-popup-content">
         <img src="profile.jpg" alt="Profile image" class="profile-image">
-        <p>Hello {{ username }} {{ USER_ID }}</p>
+        <p>Hello {{ firstname }}</p>
         <button class="edit-profile-btn" routerLink="/edit-profile" >Edit Profile</button>
         </div>
       </div>
