--- a/Commonfee/src/app/user/purchase/purchase.component.html
+++ b/Commonfee/src/app/user/purchase/purchase.component.html
@@ -1,5 +1,5 @@
 <div class="payment-section">
-    <h2>ชำระค่าส่วนกล</h2>
+    <h2>ชำระค่าส่วนกลาง</h2>
     <div class="filter">
       <div class="headfilter"><h5>ประวัติการชำระเงิน</h5></div>
       <div class="filtercontrol">
