--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -6,7 +6,7 @@
   </div>
     <ul class="nav navbar-nav mx-auto">
       <li class="nav-item" routerLinkActive="active-nav-link">
-        <a class="nav-link " routerLink="/service" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">บริการ</a>
+        <a class="nav-link " routerLink="/home" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">หน้าแรก</a>
       </li>
       <li class="nav-item" routerLinkActive="active-nav-link">
         <a class="nav-link" routerLink="/purchase" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ชำระเงิน</a>
