--- a/Commonfee/src/app/admin/dashboard/dashboard.component.html
+++ b/Commonfee/src/app/admin/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
   <div class="col">
       <div class="showdetail">
           <h5>แก้ไขอัตราชำระ</h5>
-          <button type="button" class="btn nB" (click)="changeFee()">แก้ไขอัตราชำระ</button>
+          <button type="button" class="btn nB" (click)="openModal1()">แก้ไขอัตราชำระ</button>
       </div>
   </div>
   <div class="col">
@@ -21,8 +21,8 @@
   </div>
   <div class="col">
       <div class="showdetail">
-          <h5>ค้างชำระ</h5>
-          <button type="button" class="btn nB" >แจ้งเตือน</button>
+          <h5>แจ้งเตือนค้างชำระ</h5>
+          <button type="button" class="btn nB" (click)="sendWarning()" >แจ้งเตือน</button>
       </div>
   </div>
   <div class="col">
@@ -33,7 +33,13 @@
   </div>
 </div>
 
-
+<!-- แสดงการโหลด -->
+<!-- <div *ngIf="isLoading" class="loading-spinner">
+  <div class="spinner-border" role="status">
+    <span class="sr-only">Loading...</span>
+  </div>
+  <p>กำลังดำเนินการ กรุณารอสักครู่...</p>
+</div> -->
 
  <!-- แสดงแผนผังหมู่บ้าน -->
 <div class="layout">
@@ -110,7 +116,7 @@
 </div>
     <div class="col-4">
       <div class="reviewdetail">
-      <h5>แสดงการจองของลูกบ้าน</h5>
+      <h5>แสดงเงินเข้าล่าสุด</h5>
       <table class="table">
         <thead>
           <tr>
@@ -174,6 +180,50 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" (click)="closeModal()">ยกเลิก</button>
             <button type="submit" class="btn btn-primary">บันทึก</button>
+          </div>
+        </form>
+      </div>
+      
+    </div>
+  </div>
+</div>
+<!-- Modal for Change FeeRate -->
+
+<div class="modal" *ngIf="isModalOpen1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">ปรับเปลี่ยนอัตราการชำระ</h5>
+        <button type="button" class="close" (click)="closeModal1()">&times;</button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="ChangeFee" (ngSubmit)="changeFee()">
+          <div class="form-group">
+            <label for="House_Size">เลือกขนาดบ้าน</label>
+            <select id="House_Size" formControlName="House_Size" class="form-select" (change)="onHouseSizeChange($event)">
+              <option value="">เลือกประเภทบ้าน</option>
+              <option *ngFor="let size of houseSizes" [value]="size.House_Size">{{ size.House_Size }}</option>
+            </select>
+          </div>
+        
+          <div class="form-group">
+            <label for="Land_size">พื้นที่บ้าน</label>
+            <input id="Land_size" formControlName="Land_size" class="form-control" placeholder="ขนาดพื้นที่บ้าน" readonly>
+          </div>
+
+          <div class="form-group">
+            <label for="FeeRate">อัตราชำระ ต่อตารางวา</label>
+            <input id="FeeRate" formControlName="FeeRate" class="form-control" placeholder="อัตราค่าชำระ">
+          </div>
+          
+          <div class="form-group">
+            <label for="Fine">ค่าปรับ</label>
+            <input id="Fine" formControlName="Fine" class="form-control" placeholder="อัตราค่าชำระ">
+          </div>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" (click)="closeModal1()">ยกเลิก</button>
+            <button type="changeFee" class="btn btn-primary">บันทึก</button>
           </div>
         </form>
       </div>
