--- a/Commonfee/src/app/user/Not use/book-room/book-room.component.html
+++ b/Commonfee/src/app/user/Not use/book-room/book-room.component.html
@@ -1,28 +1,28 @@
-<app-side-service></app-side-service>
+
 <div class="book-room-container">
     <h1>จองห้องส่วนกลาง</h1>
     
     <form (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label for="room">เลือกห้อง</label>
-        <select id="room" [(ngModel)]="booking.room" name="room" required>
+        <select id="room"  name="room" required>
           <option *ngFor="let room of rooms" [value]="room">{{ room }}</option>
         </select>
       </div>
       
       <div class="form-group">
         <label for="date">วันที่จอง</label>
-        <input type="date" id="date" [(ngModel)]="booking.date" name="date" required>
+        <input type="date" id="date" name="date" required>
       </div>
   
       <div class="form-group">
         <label for="time">เวลา</label>
-        <input type="time" id="time" [(ngModel)]="booking.time" name="time" required>
+        <input type="time" id="time"name="time" required>
       </div>
       
       <div class="form-group">
         <label for="duration">ระยะเวลาการใช้งาน (ชั่วโมง)</label>
-        <input type="number" id="duration" [(ngModel)]="booking.duration" name="duration" min="1" max="8" required>
+        <input type="number" id="duration" name="duration" min="1" max="8" required>
       </div>
   
       <button type="submit" class="submit-btn">จองห้อง</button>
