--- a/Commonfee/src/app/user/purchase/purchase.component.html
+++ b/Commonfee/src/app/user/purchase/purchase.component.html
@@ -56,7 +56,7 @@
           <td>{{ payment.Pay_Date | date: 'dd MMM yyyy'}}</td>
           <td>{{ payment.House_number }}</td>
           <td>{{ payment.Land_size }} ตร.ว.</td>
-          <td>{{ payment.Pay_Amount }} บาท</td>
+          <td>{{ payment.Pay_Amount  }} บาท</td>
           <td>{{ payment.Pay_Deadline | date: 'dd MMM yyyy'}}</td>
            <!-- <td>{{ payment.Pay_Status}}</td>  -->
           <td>
@@ -64,7 +64,10 @@
             <button *ngIf="payment.Pay_Status.trim() !== 'Paid'" (click)="onGenerateQR(payment)">ชำระเงิน</button>
             <button *ngIf="payment.Pay_Status.trim() === 'Paid'" disabled>ชำระแล้ว</button>
           </td>
-          <td><button (click)="generatePDF(payment)">Print</button></td>
+          <td>
+              <button *ngIf="payment.Pay_Status.trim() !== 'Paid'" (click)="generatePDF(payment)">Print</button>
+              <button *ngIf="payment.Pay_Status.trim() === 'Paid'" (click)="generatePDF(payment)">Print</button>
+          </td>
       </tr>
     </tbody>
   </table>
