--- a/Commonfee/src/app/app.component.html
+++ b/Commonfee/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header *ngIf="showHeader"></app-header>
-<div [ngClass]="{'login-content': isLoginPage || isregisterPage, 'content': !isLoginPage && !isAdminPage && !isHomeUserPage,
+<div [ngClass]="{'login-content': isLoginPage || isforgotPage, 'content': !isLoginPage && !isAdminPage && !isHomeUserPage,
 'adminContent': adminSide}">
 
 
