--- a/Commonfee/src/app/user/login/login.component.html
+++ b/Commonfee/src/app/user/login/login.component.html
@@ -44,7 +44,7 @@
       >
         Login
       </button>
-      <div class="text-center pt-4 q">ลืมรหัสผ่านใช่ไหม? <a id="forget" >ลืมรหัสผ่าน</a></div>
+      <div class="text-center pt-4 q">ลืมรหัสผ่านใช่ไหม? <a id="forget" routerLink="/forgotpass" >ลืมรหัสผ่าน</a></div>
   
 
     </form>
