--- a/Commonfee/src/app/admin/resident-list/resident-list.component.html
+++ b/Commonfee/src/app/admin/resident-list/resident-list.component.html
@@ -35,7 +35,7 @@
 <div class="profile-cards-container mt-5">
     <div class="profile-card " *ngFor="let resident of residents$ | async">
       <div class="profile-image">
-        <img src="profile.jpg" alt="Profile" />
+        <img [src]="'http://localhost:3500/' + resident.User_image " alt="Profile" />
       </div>
       <div class="profile-details">
         <p>ชื่อ-สกุล : {{ resident.R_Firstname }}  {{ resident.R_Lastname }}</p>
