--- a/Commonfee/src/app/user/header/header.component.html
+++ b/Commonfee/src/app/user/header/header.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="/purchase" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ชำระเงิน</a>
       </li>
       <li class="nav-item" routerLinkActive="active-nav-link">
-        <a class="nav-link" routerLink="/status" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ร้องเรียน</a>
+        <a class="nav-link" routerLink="/report" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">ร้องเรียน</a>
       </li>
       <li class="nav-item" routerLinkActive="active-nav-link">
         <a class="nav-link" routerLink="/about-us" style="font-size: 14px; padding: 0.5rem 1rem; font-weight:bold;">เกี่ยวกับเรา</a>
