--- a/Commonfee/src/app/user/Residentreport/report.component.css
+++ b/Commonfee/src/app/user/Residentreport/report.component.css
@@ -1,4 +1,67 @@
-.report-form {
+.filter{
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  width:1000px;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
+}
+
+.headfilter{
+  padding-top: 2rem;
+}
+
+.filtercontrol{
+  display: flex;
+  justify-content: space-between;
+  margin: 2rem;
+}
+
+.formyear,.formmonth{
+  width: 100%;
+  border-radius: 10px;
+}
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 5px 5px 10px rgba(38, 0, 255, 0.312);
+  }
+  
+  h3 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .status-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+  }
+  
+  .status-table th, .status-table td {
+    padding: 12px 15px;
+    border: 1px solid #ddd;
+    text-align: center;
+  }
+  
+  .status-table th {
+    font-weight: bold;
+  }
+  
+  .finish {
+    color: green;
+    font-weight: bold;
+  }
+  
+  .ongoing {
+    color: orange;
+    font-weight: bold;
+  }
+  .report-form {
     width: 100%;
     max-width: 900px; /* Adjust to fit in the screen */
     margin: 0 auto;
