--- a/Commonfee/src/app/user/purchase/purchase.component.html
+++ b/Commonfee/src/app/user/purchase/purchase.component.html
@@ -3,40 +3,43 @@
     <div class="filter">
       <div class="headfilter"><h5>ประวัติการชำระเงิน</h5></div>
       <div class="filtercontrol">
-          <div class="form">
+        <div class="form">
           <label for="month">เดือน </label>
-          <select name="month" id="month" class="formmonth">
-              <option value="1">มกราคม</option>
-              <option value="2">กุมภาพันธ์</option>
-              <option value="3">มีนาคม</option>
-              <option value="4">เมษายน</option>
-              <option value="5">พฤษภาคม</option>
-              <option value="6">มิถุนายน</option>
-              <option value="7">กรกฎาคม</option>
-              <option value="8">สิงหาคม</option>
-              <option value="9">กันยายน</option>
-              <option value="10">ตุลาคม</option>
-              <option value="11">พฤศจิกายน</option>
-              <option value="12">ธันวาคม</option>
+          <select name="month" id="month" class="formmonth" [(ngModel)]="month">
+            <option value="">ทั้งหมด</option> <!-- ตัวเลือกเพื่อแสดงทั้งหมด -->
+            <option value="1">มกราคม</option>
+            <option value="2">กุมภาพันธ์</option>
+            <option value="3">มีนาคม</option>
+            <option value="4">เมษายน</option>
+            <option value="5">พฤษภาคม</option>
+            <option value="6">มิถุนายน</option>
+            <option value="7">กรกฎาคม</option>
+            <option value="8">สิงหาคม</option>
+            <option value="9">กันยายน</option>
+            <option value="10">ตุลาคม</option>
+            <option value="11">พฤศจิกายน</option>
+            <option value="12">ธันวาคม</option>
           </select>
-      </div>
-
-      <div class="form">
+        </div>
+      
+        <div class="form">
           <div class="form-group"> 
-              <label for="year">ปี</label>
-              <select name="year" id="year" class="formyear">
-                <option value="1">2024</option>
-                <option value="2">2023</option>
-                <option value="3">2022</option>
-              </select>
-            </div>
-      </div>
-
-      <button type="submit" class="btn btn-primary">กรอง</button>
+            <label for="year">ปี</label>
+            <select name="year" id="year" class="formyear" [(ngModel)]="year">
+              <option value="">ทั้งหมด</option> <!-- ตัวเลือกเพื่อแสดงทั้งหมด -->
+              <option value="2024">2024</option>
+              <option value="2023">2023</option>
+              <option value="2022">2022</option>
+            </select>
+          </div>
+        </div>
+      
+        <button type="button" class="btn btn-primary" (click)="filterPaymentHistory()">กรอง</button>
       </div>
       
       
   </div>
+
 
   <table class="payment-table">
     <thead>
