--- a/Commonfee/src/app/user/home/home.component.html
+++ b/Commonfee/src/app/user/home/home.component.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="col-md-8">
                       <div class="card-body text-center d-flex flex-column justify-content-center">
-                        <p class="card-text"><small class="text-muted">{{ Announce.Announce_Date | date: 'MM/dd/yyyy, hh:mm a'}}</small></p>
+                        <p class="card-text"><small class="text-muted">{{ Announce.Adjusted_Announce_Date | date: 'MM/dd/yyyy, hh:mm a'}}</small></p>
                         <h5 class="card-title">{{ Announce.Announce_Title }}</h5>
                         <p class="card-text">{{ Announce.Announce_Detail }}</p>
                       </div>
